# analysta

./: .gitignore  .pre-commit-config.yaml  README.md  comparison_report.html  demo_analysta.py  new_report.html  pyproject.toml
.github/workflows/: release.yml  test.yml
conda/: meta.yaml
src/analysta/: __about__.py  __init__.py  check.py  cli.py  delta.py  diff.py  io.py  quality.py  ui.py
tests/: test_cli.py  test_delta.py  test_delta_additional.py  test_expect_df.py  test_find_duplicates.py  test_hello.py  test_io.py  test_public_api.py  test_quality.py  test_to_html.py  test_trim_whitespace.py
